1. Prevent overscroll on iOS safari 2. Prevent scrolling to the right and see hidden divs 3. Add padding to card 4. Adjust share and learn button position 5. Remove card hover effect 6. Add card min-height 7. Make result column thinner on mobile 8. Disable selection on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,19 @@
     outline: 0;
 }
 
+html,
 body {
+    width: 100%;
     height: 100%;
     overflow: hidden;
+    -webkit-overflow-scrolling: auto;
+}
+
+.disable-select {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 a {
@@ -32,6 +42,10 @@ a:hover {
 }
 
 .client-window {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     background-color: #222222 !important;
     color: white;
 }
@@ -170,7 +184,17 @@ md-list md-list-item.selected button.md-button:not([disabled]):hover {
     text-transform: uppercase;
     padding-top: 0px;
     padding-bottom: 0px;
+    padding-left: 7px;
+    padding-right: 7px;
     color: white;
+}
+
+.card {
+    min-height: 15px;
+}
+
+#results .card {
+    min-height: 0;
 }
 
 .card.result.ng-enter {
@@ -207,11 +231,11 @@ md-list md-list-item.selected button.md-button:not([disabled]):hover {
     outline: 0;
 }
 
-.card-column .card:hover {
+/*.card-column .card:hover {
     -ms-transform: scale(1.05, 1.05);
     -webkit-transform: scale(1.05, 1.05);
     transform: scale(1.05, 1.05);
-}
+}*/
 
 #results.card-column .card:hover {
     -ms-transform: none;
@@ -267,11 +291,10 @@ md-list md-list-item.selected button.md-button:not([disabled]):hover {
 
 @media (max-width: 700px) {
     .card-column {
-        width: calc(100% - 60px);
+        width: calc(100% - 40px);
         border-left: 1px solid #e0e0e0;
         box-shadow: none;
     }
-    
     #results.card-column {
         border: none;
     }
@@ -646,11 +669,14 @@ md-list md-list-item.selected button.md-button:not([disabled]):hover {
         line-height: 16px;
     }
     #fbShareBtn {
-        right: 0;
+        right: 65px;
+        margin-right: 0;
+        min-width: 0;
     }
     #pledgeBtn {
-        top: 40px;
         right: 0;
+        margin-right: 0;
+        min-width: 0;
     }
 }
 
@@ -763,7 +789,7 @@ md-list md-list-item.selected button.md-button:not([disabled]):hover {
 
 @media (max-width: 700px) {
     .nav-button.next {
-        right: 60px;
+        right: 40px;
     }
 }
 
